<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.eazzyapps.test.ui.viewmodels.DetailsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nameLabel"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            android:text="@string/commit_name"
            app:layout_constraintEnd_toStartOf="@+id/idLabel"
            app:layout_constraintStart_toStartOf="@+id/nameText"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/idLabel"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/repo_id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/nameText"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@{viewModel.name}"
            app:layout_constraintEnd_toStartOf="@+id/idText"
            app:layout_constraintStart_toStartOf="@+id/ownerLabel"
            app:layout_constraintTop_toBottomOf="@+id/nameLabel"
            tools:text="Some name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/idText"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@{viewModel.id}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameText"
            app:layout_constraintTop_toBottomOf="@+id/nameLabel"
            tools:text="Some id" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ownerLabel"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/repo_owner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ownerText"
            app:layout_constraintTop_toBottomOf="@+id/idText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ownerText"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@{viewModel.owner}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/dateLabel"
            app:layout_constraintTop_toBottomOf="@+id/ownerLabel"
            tools:text="Some owner" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dateLabel"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/repo_created_at"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/dateText"
            app:layout_constraintTop_toBottomOf="@+id/ownerText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dateText"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@{viewModel.date}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/licenseLabel"
            app:layout_constraintTop_toBottomOf="@+id/dateLabel"
            tools:text="Some date" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/licenseLabel"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/repo_license"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/licenseText"
            app:layout_constraintTop_toBottomOf="@+id/dateText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/licenseText"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@{viewModel.license}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/descLabel"
            app:layout_constraintTop_toBottomOf="@+id/licenseLabel"
            tools:text="Some license" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/descLabel"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/repo_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/descText"
            app:layout_constraintTop_toBottomOf="@+id/licenseText" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/descText"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@{viewModel.desc}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descLabel"
            tools:text="Some description" />

        <include
            android:id="@+id/commits"
            layout="@layout/view_commits_history"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descText"
            app:viewModel="@{viewModel.commitsViewModel}" />

        <androidx.core.widget.ContentLoadingProgressBar
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/commits"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/commits"
            app:visible="@{viewModel.isLoading}"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>